# trusted-mcp-server

./: Dockerfile  Makefile  README.md  gvproxy.sh  setup.sh  start.sh
gmail_mcp/: pyproject.toml  server.py
verifier/: package.json  pnpm-lock.yaml
verifier/mcp/react-ts-webpack/: package.json  pnpm-lock.yaml  tsconfig.json  webpack.js
verifier/mcp/react-ts-webpack/src/: app.tsx
verifier/mcp/react-ts-webpack/src/components/: alert.tsx  verify-mcp.tsx  verify-tee.tsx
verifier/mcp/react-ts-webpack/src/utils/: worker.ts
verifier/src/: lib.ts
verifier/test/: worker.ts
verifier/wasm/pkg/: tlsn_wasm.d.ts  tlsn_wasm.js  tlsn_wasm_bg.wasm  tlsn_wasm_bg.wasm.d.ts
verifier/wasm/remote-attestation-verifier/: package.json  remote_attestation_verifier.d.ts  remote_attestation_verifier.js  remote_attestation_verifier_bg.wasm  remote_attestation_verifier_bg.wasm.d.ts
