[project]
name = "gmail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.6.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
    "py-dotenv>=0.1",
    "ruff>=0.11.3",
    "loguru>=0.7.3",
]
